--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ https://templatemo.com/tm-582-tale-seo-agency
               <a href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.
             </p>
             <div class="main-button scroll-to-section"><a href="#services">Ko'proq kashf qiling</a></div>
-            <span>or</span>
+            <span>yoki</span>
             <div class="second-button"><a href="faqs.html">Tez-Tez soraladigan savollarimizni tekshiring</a></div>
           </div>
         </div>
@@ -303,29 +303,29 @@ https://templatemo.com/tm-582-tale-seo-agency
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                        <input type="name" name="name" id="name" placeholder="Sizning Ismingiz..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="surname" name="surname" id="surname" placeholder="Your Surname..."
+                        <input type="surname" name="surname" id="surname" placeholder="Sizning Familiyangiz..."
                           autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..."
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Sizning emailingiz..."
                           required="">
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on">
+                        <input type="subject" name="subject" id="subject" placeholder="Mavzu..." autocomplete="on">
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <textarea name="message" id="message" placeholder="Sizning Habaringiz"></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
