--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="subject" name="subject" id="subject" placeholder="Mavzu..." autocomplete="on">
+                        <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on">
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
