--- a/about.html
+++ b/about.html
@@ -90,13 +90,15 @@ https://templatemo.com/tm-582-tale-seo-agency
                       <li><a href="index.html">Home</a></li>
                       <li><a href="index.html">Services</a></li>
                       <li><a href="index.html">Projects</a></li>
-                      <li class="has-sub">
+                      <li><a href="about.html">About Us</a></li>
+
+                      <!-- <li class="has-sub">
                           <a href="javascript:void(0)">Pages</a>
                           <ul class="sub-menu">
-                              <li><a href="about.html">About Us</a></li>
+                              <li></li>
                               <li><a href="faqs.html">FAQs</a></li>
                           </ul>
-                      </li>
+                      </li> -->
                       <li><a href="index.html">Infos</a></li>
                       <li><a href="index.html">Contact</a></li>
                   </ul>
