--- a/index.html
+++ b/index.html
@@ -66,13 +66,15 @@ https://templatemo.com/tm-582-tale-seo-agency
               <li class="scroll-to-section"><a href="#top" class="active">Uy</a></li>
               <li class="scroll-to-section"><a href="#services">Xizmatlar</a></li>
               <li class="scroll-to-section"><a href="#projects">Loyihalar</a></li>
-              <li class="has-sub">
+              <li class="scroll-to-section"><a href="about.html">Biz haqimizda</a></li>
+
+              <!-- <li class="has-sub">
                 <a href="javascript:void(0)">Sahifalr</a>
                 <ul class="sub-menu">
                   <li><a href="about.html">Biz haqimizda</a></li>
                   <li><a href="faqs.html">Savollar</a></li>
                 </ul>
-              </li>
+              </li> -->
               <li class="scroll-to-section"><a href="#infos">Ma'lumot</a></li>
               <li class="scroll-to-section"><a href="#contact">Aloqa</a></li>
             </ul>
