--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-6">
           <div class="video-thumb">
-            <img src="assets/images/video-thumb.jpg" alt="">
+            <img class="video-thumb-img" src="assets/images/video-thumb.jpg" alt="">
             <a href="http://youtube.com" target="_blank"><i class="fa fa-play"></i></a>
           </div>
         </div>
