--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-6 offset-lg-6">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 ">
               <div class="section-heading">
                 <h2>Biz <em>sizning agentligingiz uchun</em>
                   <span>turli xil xizmatlar va</span> xususiyatlarni taqdim etamiz
@@ -176,8 +176,8 @@ https://templatemo.com/tm-582-tale-seo-agency
       </div>
     </div>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="row mobile-vides">
+        <div class="col-lg-12 ">
           <div class="owl-features owl-carousel">
             <div class="item">
               <img src="assets/images/projects-01.jpg" alt="">
