--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ https://templatemo.com/tm-582-tale-seo-agency
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Uy</a></li>
+              <li class="scroll-to-section"><a href="#top" class="active">Bosh sahifa</a></li>
               <li class="scroll-to-section"><a href="#services">Xizmatlar</a></li>
               <li class="scroll-to-section"><a href="#projects">Loyihalar</a></li>
-              <li class="scroll-to-section"><a href="about.html">Biz haqimizda</a></li>
+              <!-- <li class="scroll-to-section"><a href="about.html">Biz haqimizda</a></li> -->
 
               <!-- <li class="has-sub">
                 <a href="javascript:void(0)">Sahifalr</a>
@@ -96,14 +96,14 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="caption header-text">
             <h6>Predominant kompaniyasi</h6>
             <div class="line-dec"></div>
-            <h4>Marketing <em>dunyosiga </em>shong'ing <span> Predominant bilan</span></h4>
+            <h4> <span>Predominant bilan</span> Marketing <em>dunyosiga </em>  shong'ing</h4>
             <p>Sizning biznesingizda marketingga oid muammolar uchrayabdimi? Siz o'z sahifangizni ijtimoiy tarmoqlarda
-              faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz! <a href="index.html">Home</a>,
-              <a href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.
+              faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz! <a href="#top">Bosh sahifa</a>,
+              <a href="#projects">Loyihalarimiz</a>, va <a href="#infos">Ma'lumot</a>.
             </p>
-            <div class="main-button scroll-to-section"><a href="#services">Ko'proq kashf qiling</a></div>
+            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Ko'proq kashf qiling</a></div>
             <span>yoki</span>
-            <div class="second-button"><a href="faqs.html">Tez-Tez soraladigan savollarimizni tekshiring</a></div>
+            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Biz bilan bog'laning</a></div>
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@ https://templatemo.com/tm-582-tale-seo-agency
               </div>
               <div class="col-lg-6">
                 <div class="section-heading">
-                  <h2><em>Biz Haqimizda</em> Ko'proq Ma'lumot  Va Nima <span>Taklif Qilamiz</span></h2>
+                  <h2 style="text-transform: none !important;"><em>Biz haqimizda</em> ho'proq ma'lumot  va nima <span>taklif qilamiz</span></h2>
                   <!-- Biz Haqimizda Ko'proq Ma'lumot Va Nima Taklif Qilamiz -->
                   <div class="line-dec"></div>
                   <p>
@@ -299,18 +299,18 @@ https://templatemo.com/tm-582-tale-seo-agency
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="section-heading">
-                        <h2><em>Bizga aloqaga chiqing</em> Va <span>Bog'laning</span></h2>
+                        <h2 style="text-transform: none !important;"><em >Bizga aloqaga chiqing</em> va <span >bog'laning</span></h2>
                         Bizga aloqaga chiqing Va Bog'laning
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="name" name="name" id="name" placeholder="Sizning Ismingiz..." autocomplete="on" required>
+                        <input type="name" name="name" id="name" placeholder="Sizning ismingiz..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="surname" name="surname" id="surname" placeholder="Sizning Familiyangiz..."
+                        <input type="surname" name="surname" id="surname" placeholder="Sizning familiyangiz..."
                           autocomplete="on" required>
                       </fieldset>
                     </div>
@@ -322,17 +322,17 @@ https://templatemo.com/tm-582-tale-seo-agency
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on">
+                        <input type="subject" name="subject" id="subject" placeholder="Mavzu..." autocomplete="on">
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea name="message" id="message" placeholder="Sizning Habaringiz"></textarea>
+                        <textarea name="message" id="message" placeholder="Sizning habaringiz"></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="orange-button">Send Message Now</button>
+                        <button type="submit" id="form-submit" class="orange-button">Habar jo'natish</button>
                       </fieldset>
                     </div>
                   </div>
