--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="row">
               <div class="col-lg-6">
                 <div class="left-image">
-                  <img src="assets/images/left-infos.jpg" alt="">
+                  <img  src="assets/images/left-infos.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="section-heading">
-                  <h2 style="text-transform: none !important;"><em>Biz haqimizda</em> ho'proq ma'lumot  va nima <span>taklif qilamiz</span></h2>
+                  <h2 style="text-transform: none !important;"><em>Biz haqimizda</em> ko'proq ma'lumot  va nima <span>taklif qilamiz</span></h2>
                   <!-- Biz Haqimizda Ko'proq Ma'lumot Va Nima Taklif Qilamiz -->
                   <div class="line-dec"></div>
                   <p>
