--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="caption header-text">
             <h6>Predominant kompaniyasi</h6>
             <div class="line-dec"></div>
-            <h4> <span>Predominant bilan</span> Marketing <em>dunyosiga </em>  shong'ing</h4>
+            <h4> <span>Predominant bilan</span> Marketing <em>dunyosiga </em>  sho'ng'ing</h4>
             <p>Sizning biznesingizda marketingga oid muammolar uchrayabdimi? Siz o'z sahifangizni ijtimoiy tarmoqlarda
               faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz! <a href="#top">Bosh sahifa</a>,
               <a href="#projects">Loyihalarimiz</a>, va <a href="#infos">Ma'lumot</a>.
@@ -118,7 +118,7 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="col-lg-12 ">
               <div class="section-heading">
                 <h2>Biz <em>sizning agentligingiz uchun</em>
-                  <span>turli xil xizmatlar va</span> xususiyatlarni taqdim etamiz
+                  <span>turli xildagi xizmatlarni va</span> xususiyatlarni taqdim etamiz
                 </h2>
                 <div class="line-dec"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
@@ -299,24 +299,24 @@ https://templatemo.com/tm-582-tale-seo-agency
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="section-heading">
-                        <h2 style="text-transform: none !important;"><em >Bizga aloqaga chiqing</em> va <span >bog'laning</span></h2>
+                        <h2 style="text-transform: none !important;"><em >Hoziroq biz</em> bilan <span >bog'laning</span></h2>
                         Bizga aloqaga chiqing Va Bog'laning
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="name" name="name" id="name" placeholder="Sizning ismingiz..." autocomplete="on" required>
+                        <input type="name" name="name" id="name" placeholder="Ismingiz..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="surname" name="surname" id="surname" placeholder="Sizning familiyangiz..."
+                        <input type="surname" name="surname" id="surname" placeholder="Familiyangiz..."
                           autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Sizning emailingiz..."
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Elektron pochtangiz..."
                           required="">
                       </fieldset>
                     </div>
@@ -327,12 +327,12 @@ https://templatemo.com/tm-582-tale-seo-agency
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea name="message" id="message" placeholder="Sizning habaringiz"></textarea>
+                        <textarea name="message" id="message" placeholder="Sizning Xabaringiz..."></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="orange-button">Habar jo'natish</button>
+                        <button type="submit" id="form-submit" class="orange-button">Xabar jo'natish</button>
                       </fieldset>
                     </div>
                   </div>
