--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz! <a href="#top">Bosh sahifa</a>,
               <a href="#projects">Loyihalarimiz</a>, va <a href="#infos">Ma'lumot</a>.
             </p>
-            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Ko'proq kashf qiling</a></div>
+            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Bizning xizmatlar</a></div>
 
-            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Biz bilan bog'laning</a></div>
+            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Biz bilan bog'lanish</a></div>
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="row">
             <div class="col-lg-12 ">
               <div class="section-heading">
-                <h2>Biz <em>sizning agentligingiz uchun</em>
+                <h2>Biz <em>sizning biznesingiz uchun</em>
                   <span>turli xildagi xizmatlarni va</span> xususiyatlarni taqdim etamiz
                 </h2>
                 <div class="line-dec"></div>
