--- a/index.html
+++ b/index.html
@@ -289,9 +289,10 @@ https://templatemo.com/tm-582-tale-seo-agency
               <div class="col-lg-4">
                 <div id="map">
                   <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d279.5903368643338!2d69.29466511049341!3d41.36601499114746!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38aef3cb9e151999%3A0x735f5a8d71b6ddd!2sPredominant%20Company!5e1!3m2!1sru!2s!4v1668594674161!5m2!1sru!2s"
                     width="100%" height="670px" frameborder="0" style="border:0; border-radius: 23px;"
                     allowfullscreen=""></iframe>
+
                 </div>
               </div>
               <div class="col-lg-8">
