--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 </div>
                 <p class="more-info">
 
-                  Sizning biznesingizda marketingga oid muammolar uchrayabdimi? Siz o'z sahifangizni ijtimoiy
-                  tarmoqlarda faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz!
+                  Mahsulotingiz sifatli, lekin qamrov kammi? Brendingizni tanitish maqsadidagi "give away"lar yordam bermadimi? Unda, biz sizga yordam beramiz!
                 </p>
               </div>
             </div>
