--- a/index.eng.html
+++ b/index.eng.html
@@ -63,13 +63,13 @@ https://templatemo.com/tm-582-tale-seo-agency
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Bosh sahifa</a></li>
-              <li class="scroll-to-section"><a href="#services">Xizmatlar</a></li>
-              <li class="scroll-to-section"><a href="#projects">Loyihalar</a></li>
+              <li class="scroll-to-section"><a href="#top" class="active">Main page</a></li>
+              <li class="scroll-to-section"><a href="#services">Services</a></li>
+              <li class="scroll-to-section"><a href="#projects">Projects</a></li>
               <!-- <li class="scroll-to-section"><a href="about.html">Biz haqimizda</a></li> -->
               <!-- href="javascript:void(0)" -->
-              <li class="scroll-to-section"><a href="#infos">Ma'lumot</a></li>
-              <li class="scroll-to-section"><a href="#contact">Aloqa</a></li>
+              <li class="scroll-to-section"><a href="#infos">About us</a></li>
+              <li class="scroll-to-section"><a href="#contact">Contact</a></li>
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -85,7 +85,7 @@ https://templatemo.com/tm-582-tale-seo-agency
               </li> -->
 
               <li class="has-sub ">
-                <a  >til</a>
+                <a  href="javascript:void(0)">Language</a>
                 <ul class="sub-menu">
                   <li><a href="index.html">uzb</a></li>
                   <li><a href="index.ru.html">rus</a></li>
@@ -109,16 +109,16 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-7">
           <div class="caption header-text">
-            <h6>Predominant kompaniyasi</h6>
+            <h6>Predominant Company</h6>
             <div class="line-dec"></div>
-            <h4> <span>Predominant bilan</span> Marketing <em>dunyosiga </em>  sho'ng'ing</h4>
-            <p>Sizning biznesingizda marketingga oid muammolar uchrayabdimi? Siz o'z sahifangizni ijtimoiy tarmoqlarda
-              faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz! <a href="#top">Bosh sahifa</a>,
-              <a href="#projects">Loyihalarimiz</a>, va <a href="#infos">Ma'lumot</a>.
-            </p>
-            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Bizning xizmatlar</a></div>
+            <h4><em>Create your </em> Marketing world <span>with Predominant</span></h4>
 
-            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Biz bilan bog'lanish</a></div>
+            <p>Are you facing marketing problems in your business? Do you want to see your brand in social media? Now, you are in the right place! <a href="#top">Main page</a>,
+              <a href="#projects">Our projects</a> and <a href="#infos">information</a>.
+            </p>
+            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Our services </a></div>
+
+            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Contact us </a></div>
           </div>
         </div>
       </div>
@@ -132,8 +132,8 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="row">
             <div class="col-lg-12 ">
               <div class="section-heading">
-                <h2>Biz <em>sizning biznesingiz uchun</em>
-                  <span>turli xildagi xizmatlarni va</span> xususiyatlarni taqdim etamiz
+                <h2>We offer
+                  <span> you several type services </span>and opportunities <em>for your business.</em>
                 </h2>
                 <div class="line-dec"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
@@ -182,7 +182,7 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h2><em>Ishlarimiz</em> va <span>loyihalarimiz </span>bilan tanishing</h2>
+            <h2><em>Here is</em> our works <span>and </span>projects</h2>
 
             <div class="line-dec"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
@@ -255,14 +255,12 @@ https://templatemo.com/tm-582-tale-seo-agency
               </div>
               <div class="col-lg-6">
                 <div class="section-heading">
-                  <h2 style="text-transform: none !important;"><em>Biz haqimizda</em> ko'proq ma'lumot  va nima <span>taklif qilamiz</span></h2>
-                  <!-- Biz Haqimizda Ko'proq Ma'lumot Va Nima Taklif Qilamiz -->
+                  <h2 style="text-transform: none !important;"><em>Information </em>about us and  <span>what we suggest</span></h2>
+                  <!-- Biz Haqimizda Ko'proq Ma'lumot Va Nima Taklif Qilamiz -->Information about us and what we suggest
                   <div class="line-dec"></div>
                   <p>
 
-                    Bizning kompaniyamizdagi ijodkor yoshlar dunyoning qator rivojlangan davlatlarida malaka oshirib
-                    qaytishgan. Misol uchun, Koreya va Rossiyadan kelgan marketologlar sizning brendingizni
-                    rivojlantirishga tayyor.
+                    Our qualified workers trained in several well-developed countries. For example, our Marketing managers are studied in south Korea and Russia and they are ready to develop your brand popularity.
                   </p>
                 </div>
                 <div class="skills">
@@ -284,7 +282,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 </div>
                 <p class="more-info">
 
-                  Mahsulotingiz sifatli, lekin qamrov kammi? Brendingizni tanitish maqsadidagi "give away"lar yordam bermadimi? Unda, biz sizga yordam beramiz!
+                  Your product is high quality but the number of customers is low?  Is give away not helping for your brand popularity? Now we are ready to help you!
                 </p>
               </div>
             </div>
@@ -314,39 +312,40 @@ https://templatemo.com/tm-582-tale-seo-agency
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="section-heading">
-                        <h2 style="text-transform: none !important;"><em >Hoziroq biz</em> bilan <span >bog'laning</span></h2>
+                        <h2 style="text-transform: none !important;"><em >Contact </em> us  <span >now</span></h2>
+                        Contact us now
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input  class="name" type="name" name="user_name"   placeholder="Ismingiz..." autocomplete="on" required>
+                        <input  class="name" type="name" name="user_name"   placeholder="Name..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input class="surname" name="surname"  placeholder="Familiyangiz..."
+                        <input class="surname" name="surname"  placeholder="Family name ..."
                           autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input class="address" type="text" name="address"  placeholder="Manzilingiz..."
+                        <input class="address" type="text" name="address"  placeholder="Address..."
                           required="">
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input onclick="return telInputChange()" class="number-input tel_number" type="tel" name=""  placeholder="Raqamingiz..." required >
+                        <input onclick="return telInputChange()" class="number-input tel_number" type="tel" name=""  placeholder="Phone number ..." required >
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea  name="message" class="message" placeholder="Sizning Xabaringiz..."></textarea>
+                        <textarea  name="message" class="message" placeholder="Your message..."></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button  onclick="return sendTelegram()"  class="orange-button not-ref telegram-send">Xabar jo'natish</button>
+                        <button  onclick="return sendTelegram()"  class="orange-button not-ref telegram-send">Send a message</button>
                       </fieldset>
                     </div>
                   </div>
@@ -385,7 +384,7 @@ https://templatemo.com/tm-582-tale-seo-agency
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2036 <a href="#">Predominant kompaniyasi</a>. All rights reserved.
+        <p>Copyright © 2036 <a href="#">Predominant company</a>. All rights reserved.
 
           <br>Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a>
         </p>
