--- a/index.ru.html
+++ b/index.ru.html
@@ -63,13 +63,13 @@ https://templatemo.com/tm-582-tale-seo-agency
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Bosh sahifa</a></li>
-              <li class="scroll-to-section"><a href="#services">Xizmatlar</a></li>
-              <li class="scroll-to-section"><a href="#projects">Loyihalar</a></li>
+              <li class="scroll-to-section"><a href="#top" class="active">Главная страница </a></li>
+              <li class="scroll-to-section"><a href="#services">Службы</a></li>
+              <li class="scroll-to-section"><a href="#projects">Проекты</a></li>
               <!-- <li class="scroll-to-section"><a href="about.html">Biz haqimizda</a></li> -->
               <!-- href="javascript:void(0)" -->
-              <li class="scroll-to-section"><a href="#infos">Ma'lumot</a></li>
-              <li class="scroll-to-section"><a href="#contact">Aloqa</a></li>
+              <li class="scroll-to-section"><a href="#infos">О нас</a></li>
+              <li class="scroll-to-section"><a href="#contact">Контакты</a></li>
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -85,7 +85,7 @@ https://templatemo.com/tm-582-tale-seo-agency
               </li> -->
 
               <li class="has-sub ">
-                <a  >til</a>
+                <a  href="javascript:void(0)">Язык</a>
                 <ul class="sub-menu">
                   <li><a href="index.html">uzb</a></li>
                   <li><a href="index.ru.html">rus</a></li>
@@ -109,16 +109,15 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-7">
           <div class="caption header-text">
-            <h6>Predominant kompaniyasi</h6>
+            <h6>Компания Predominant </h6>
             <div class="line-dec"></div>
-            <h4> <span>Predominant bilan</span> Marketing <em>dunyosiga </em>  sho'ng'ing</h4>
-            <p>Sizning biznesingizda marketingga oid muammolar uchrayabdimi? Siz o'z sahifangizni ijtimoiy tarmoqlarda
-              faol brend sifatida ko'rishni istaysizmi? Demak, siz to'g'ri manzildasiz! <a href="#top">Bosh sahifa</a>,
-              <a href="#projects">Loyihalarimiz</a>, va <a href="#infos">Ma'lumot</a>.
+            <h4> <span>Погрузитесь в мир</span> маркетинга с<em> Predominant</em> </h4>
+            <p>Ваш бизнес сталкивается с маркетинговыми проблемами? Хотите, чтобы вашу страницу воспринимали как активный бренд в социальных сетях? Тогда вы находитесь в правильном месте! <a href="#top">Главная страница</a>,
+              <a href="#projects">Наши проёкты</a> и <a href="#infos"> Информация</a>.
             </p>
-            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Bizning xizmatlar</a></div>
+            <div class="main-button scroll-to-section"><a style="text-transform: none !important;" href="#services">Наши услуги</a></div>
 
-            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Biz bilan bog'lanish</a></div>
+            <div class="second-button" ><a style="text-transform: none !important;" href="#contact">Свяжитесь с нами</a></div>
           </div>
         </div>
       </div>
@@ -132,8 +131,8 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="row">
             <div class="col-lg-12 ">
               <div class="section-heading">
-                <h2>Biz <em>sizning biznesingiz uchun</em>
-                  <span>turli xildagi xizmatlarni va</span> xususiyatlarni taqdim etamiz
+                <h2>Мы <em>предоставляем различные услуги</em>
+                  <span>и функции для </span>вашего бизнеса
                 </h2>
                 <div class="line-dec"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
@@ -182,8 +181,8 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h2><em>Ishlarimiz</em> va <span>loyihalarimiz </span>bilan tanishing</h2>
-
+            <h2><em>Познакомьтесь</em> с нашими<span> работами и </span>проектами</h2>
+            Познакомьтесь с нашими работами и проектами
             <div class="line-dec"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
           </div>
@@ -255,14 +254,12 @@ https://templatemo.com/tm-582-tale-seo-agency
               </div>
               <div class="col-lg-6">
                 <div class="section-heading">
-                  <h2 style="text-transform: none !important;"><em>Biz haqimizda</em> ko'proq ma'lumot  va nima <span>taklif qilamiz</span></h2>
+                  <h2 style="text-transform: none !important;"><em>Узнайте больше</em>  о нас и о том, что<span> мы предлагаем</span></h2>
                   <!-- Biz Haqimizda Ko'proq Ma'lumot Va Nima Taklif Qilamiz -->
                   <div class="line-dec"></div>
                   <p>
 
-                    Bizning kompaniyamizdagi ijodkor yoshlar dunyoning qator rivojlangan davlatlarida malaka oshirib
-                    qaytishgan. Misol uchun, Koreya va Rossiyadan kelgan marketologlar sizning brendingizni
-                    rivojlantirishga tayyor.
+                    Наша творческая молодежь вернулась с курсов повышения квалификации во многих развитых странах мира. Например, маркетологи из Кореи и России готовы развивать ваш бренд.
                   </p>
                 </div>
                 <div class="skills">
@@ -284,7 +281,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 </div>
                 <p class="more-info">
 
-                  Mahsulotingiz sifatli, lekin qamrov kammi? Brendingizni tanitish maqsadidagi "give away"lar yordam bermadimi? Unda, biz sizga yordam beramiz!
+                  Ваш продукт качественный, но у вас узкий диапазон? "Give away" не помог продвинуть ваш бренд? Тогда мы поможем вам!
                 </p>
               </div>
             </div>
@@ -314,34 +311,34 @@ https://templatemo.com/tm-582-tale-seo-agency
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="section-heading">
-                        <h2 style="text-transform: none !important;"><em >Hoziroq biz</em> bilan <span >bog'laning</span></h2>
+                        <h2 style="text-transform: none !important;"><em >Немедленно</em> свяжитесь с  <span >нами</span></h2>
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input  class="name" type="name" name="user_name"   placeholder="Ismingiz..." autocomplete="on" required>
+                        <input  class="name" type="name" name="user_name"   placeholder="Имя..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input class="surname" name="surname"  placeholder="Familiyangiz..."
+                        <input class="surname" name="surname"  placeholder="Фамилия..."
                           autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input class="address" type="text" name="address"  placeholder="Manzilingiz..."
+                        <input class="address" type="text" name="address"  placeholder="Адрес..."
                           required="">
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input onclick="return telInputChange()" class="number-input tel_number" type="tel" name=""  placeholder="Raqamingiz..." required >
+                        <input onclick="return telInputChange()" class="number-input tel_number" type="tel" name=""  placeholder="Номер..." required >
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea  name="message" class="message" placeholder="Sizning Xabaringiz..."></textarea>
+                        <textarea  name="message" class="message" placeholder="Ваша сообщение..."></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
@@ -385,7 +382,7 @@ https://templatemo.com/tm-582-tale-seo-agency
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2036 <a href="#">Predominant kompaniyasi</a>. All rights reserved.
+        <p>Copyright © 2036 <a href="#">Predominant company</a>. All rights reserved.
 
           <br>Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a>
         </p>
