--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ https://templatemo.com/tm-582-tale-seo-agency
               <!-- href="javascript:void(0)" -->
               <li class="scroll-to-section"><a href="#infos">Ma'lumot</a></li>
               <li class="scroll-to-section"><a href="#contact">Aloqa</a></li>
+              <li class="scroll-to-section language"><a href="index.html">uzb</a></li>
+              <li class="scroll-to-section language"><a href="index.ru.html">rus</a></li>
+              <li class="scroll-to-section language"><a href="index.eng.html">eng</a></li>
+
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -84,7 +88,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 </select>
               </li> -->
 
-              <li class="has-sub ">
+              <li class="has-sub nav-language">
                 <a  >til</a>
                 <ul class="sub-menu">
                   <li><a href="index.html">uzb</a></li>
