--- a/index.eng.html
+++ b/index.eng.html
@@ -70,6 +70,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               <!-- href="javascript:void(0)" -->
               <li class="scroll-to-section"><a href="#infos">About us</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
+              <li class="scroll-to-section language"><a href="index.html">uzb</a></li>
+              <li class="scroll-to-section language"><a href="index.ru.html">rus</a></li>
+              <li class="scroll-to-section language"><a href="index.eng.html">eng</a></li>
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -84,7 +87,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 </select>
               </li> -->
 
-              <li class="has-sub ">
+              <li class="has-sub nav-language">
                 <a  href="javascript:void(0)">Language</a>
                 <ul class="sub-menu">
                   <li><a href="index.html">uzb</a></li>
