--- a/index.ru.html
+++ b/index.ru.html
@@ -70,6 +70,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               <!-- href="javascript:void(0)" -->
               <li class="scroll-to-section"><a href="#infos">О нас</a></li>
               <li class="scroll-to-section"><a href="#contact">Контакты</a></li>
+              <li class="scroll-to-section language"><a href="index.html">uzb</a></li>
+              <li class="scroll-to-section language"><a href="index.ru.html">rus</a></li>
+              <li class="scroll-to-section language"><a href="index.eng.html">eng</a></li>
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -84,7 +87,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 </select>
               </li> -->
 
-              <li class="has-sub ">
+              <li class="has-sub nav-language">
                 <a  href="javascript:void(0)">Язык</a>
                 <ul class="sub-menu">
                   <li><a href="index.html">uzb</a></li>
@@ -343,7 +346,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button  onclick="return sendTelegram()"  class="orange-button not-ref telegram-send">Xabar jo'natish</button>
+                        <button  onclick="return sendTelegram()"  class="orange-button not-ref telegram-send">Отправить сообщение </button>
                       </fieldset>
                     </div>
                   </div>
