--- a/index.eng.html
+++ b/index.eng.html
@@ -70,9 +70,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               <!-- href="javascript:void(0)" -->
               <li class="scroll-to-section"><a href="#infos">About us</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li>
-              <li class="scroll-to-section language"><a href="index.html">uzb</a></li>
-              <li class="scroll-to-section language"><a href="index.ru.html">rus</a></li>
-              <li class="scroll-to-section language"><a href="index.eng.html">eng</a></li>
+              <li class="scroll-to-section language"><a href="index.html">Uzb</a></li>
+              <li class="scroll-to-section language"><a href="index.ru.html">Rus</a></li>
+              <li class="scroll-to-section language"><a href="index.eng.html">Eng</a></li>
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -90,9 +90,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               <li class="has-sub nav-language">
                 <a  href="javascript:void(0)">Language</a>
                 <ul class="sub-menu">
-                  <li><a href="index.html">uzb</a></li>
-                  <li><a href="index.ru.html">rus</a></li>
-                  <li><a href="index.eng.html">eng</a></li>
+                  <li><a href="index.html">Uzb</a></li>
+                  <li><a href="index.ru.html">Rus</a></li>
+                  <li><a href="index.eng.html">Eng</a></li>
                 </ul>
               </li>
             </ul>
