--- a/index.ru.html
+++ b/index.ru.html
@@ -70,9 +70,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               <!-- href="javascript:void(0)" -->
               <li class="scroll-to-section"><a href="#infos">О нас</a></li>
               <li class="scroll-to-section"><a href="#contact">Контакты</a></li>
-              <li class="scroll-to-section language"><a href="index.html">uzb</a></li>
-              <li class="scroll-to-section language"><a href="index.ru.html">rus</a></li>
-              <li class="scroll-to-section language"><a href="index.eng.html">eng</a></li>
+              <li class="scroll-to-section language"><a href="index.html">Узб</a></li>
+              <li class="scroll-to-section language"><a href="index.ru.html">Рус</a></li>
+              <li class="scroll-to-section language"><a href="index.eng.html">Енг</a></li>
               <!-- <li class="scroll-to-section"><select name="" id="">
                 <option value="eng"><a href="index.html">uzb</a></option>
                 <option value="eng"><a href="index.ru.html">rus</a></option>
@@ -90,9 +90,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               <li class="has-sub nav-language">
                 <a  href="javascript:void(0)">Язык</a>
                 <ul class="sub-menu">
-                  <li><a href="index.html">uzb</a></li>
-                  <li><a href="index.ru.html">rus</a></li>
-                  <li><a href="index.eng.html">eng</a></li>
+                  <li><a href="index.html">Узб</a></li>
+                  <li><a href="index.ru.html">Рус</a></li>
+                  <li><a href="index.eng.html">Енг</a></li>
                 </ul>
               </li>
             </ul>
