--- a/index.ru.html
+++ b/index.ru.html
@@ -294,7 +294,7 @@ https://templatemo.com/tm-582-tale-seo-agency
     </div>
   </div>
 
-  <div class="contact-us section" id="contact">
+  <div class="contact-us section" >
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -309,7 +309,7 @@ https://templatemo.com/tm-582-tale-seo-agency
 
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-lg-8" id="contact">
                 <div   id="contact-form"  >
                   <div class="row">
                     <div class="col-lg-12">
