--- a/index.ru.html
+++ b/index.ru.html
@@ -138,7 +138,6 @@ https://templatemo.com/tm-582-tale-seo-agency
                   <span>и функции для </span>вашего бизнеса
                 </h2>
                 <div class="line-dec"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
               </div>
             </div>
             <div class="col-lg-6 col-sm-6">
@@ -185,9 +184,7 @@ https://templatemo.com/tm-582-tale-seo-agency
         <div class="col-lg-6">
           <div class="section-heading">
             <h2><em>Познакомьтесь</em> с нашими<span> работами и </span>проектами</h2>
-            Познакомьтесь с нашими работами и проектами
             <div class="line-dec"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
           </div>
         </div>
       </div>
@@ -197,42 +194,119 @@ https://templatemo.com/tm-582-tale-seo-agency
         <div class="col-lg-12 ">
           <div class="owl-features owl-carousel">
             <div class="item">
-              <img src="assets/images/projects-01.jpg" alt="">
+              <img src="./img/1.jpg" alt="">
               <div class="down-content">
                 <h4>Digital Agency HTML Templates</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/projects-02.jpg" alt="">
+              <img src="./img/2.jpg" alt="">
               <div class="down-content">
                 <h4>Admin Dashboard CSS Templates</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/projects-03.jpg" alt="">
+              <img src="./img/3.jpg" alt="">
               <div class="down-content">
                 <h4>Best Responsive Website Layouts</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/projects-04.jpg" alt="">
+              <img src="./img/4.jpg" alt="">
               <div class="down-content">
                 <h4>HTML CSS Layouts for your websites</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/projects-02.jpg" alt="">
+              <img src="./img/5.jpg" alt="">
               <div class="down-content">
                 <h4>Bootstrap 5 Themes for Free</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="assets/images/projects-03.jpg" alt="">
+              <img src="./img/6.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/7.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/8.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/9.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/10.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/11.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/12.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/13.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/14.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/15.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/16.jpg" alt="">
+              <div class="down-content">
+                <h4>Mobile Friendly Website Layouts</h4>
+                <a href="#"><i class="fa fa-link"></i></a>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/17.jpg" alt="">
               <div class="down-content">
                 <h4>Mobile Friendly Website Layouts</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
@@ -261,7 +335,6 @@ https://templatemo.com/tm-582-tale-seo-agency
                   <!-- Biz Haqimizda Ko'proq Ma'lumot Va Nima Taklif Qilamiz -->
                   <div class="line-dec"></div>
                   <p>
-
                     Наша творческая молодежь вернулась с курсов повышения квалификации во многих развитых странах мира. Например, маркетологи из Кореи и России готовы развивать ваш бренд.
                   </p>
                 </div>
@@ -283,7 +356,6 @@ https://templatemo.com/tm-582-tale-seo-agency
                   </div>
                 </div>
                 <p class="more-info">
-
                   Ваш продукт качественный, но у вас узкий диапазон? "Give away" не помог продвинуть ваш бренд? Тогда мы поможем вам!
                 </p>
               </div>
