--- a/index.eng.html
+++ b/index.eng.html
@@ -200,42 +200,42 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="item">
               <img src="./img/1.jpg" alt="">
               <div class="down-content">
-                <h4>Protexno — Maishiy texnikalar va telefonlar do'koni bo'lib, 3 yil kafolat ostida Toshkentda bo'ylab bepul yetkazib beradi. </h4>
+                <h4>Protexno — is Household techs and Mobile phones market, free delivery around Tashkent with  3 years guarantee. </h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/2.jpg" alt="">
               <div class="down-content">
-                <h4>Abu sahiy onlayn — O'zbekistondagi eng yirik internet do'konlaridan biri hisoblanadi. Brend asoschisi, elchi va bloger Feruzbek Kamolov.</h4>
+                <h4>.Abu Sahiy online — is one of the biggest internet market in Uzbekistan. Owner of Brand name is blogger and ambassador Feruzbek Kamolov.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="./img/9.jpg" alt="">
+              <img src="./img/17.jpg" alt="">
               <div class="down-content">
-                <h4>GRBS — O'zbekistonda xalqaro ta'lim va imtihon markazi bo'lgan xalqaro imtihonlarga va kasbga tayyorlash kurslarini taklif etadi.</h4>
+                <h4>Nilufer mabel- is furniture manufacturing company with high quality in our country. Niliufer mebel — high quality and guarantee.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/12.jpg" alt="">
               <div class="down-content">
-                <h4>Boom box consulting — Ushbu yili kompaniya yordamida 1000dan ortiq abiturientlar Qozog'iston, Qirg'iziston va Tojikistondagi nufuzli universitetlar talabalari bo'ldi.</h4>
+                <h4> Boom Box Consulting — In this year, company made opportunities for thousands of  applicants  to become  a student of trustworthy universities in Kazakhstan, Kyrgyzstan and Tajikistan.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/13.jpg" alt="">
               <div class="down-content">
-                <h4>As mobil — Andijon shahridagi telefon va aksessuarlar sotuvchi internet magazin bo'lib, u o'z mijozlarini chegurmalar bian tez tez xursand qiladi.</h4>
+                <h4>As mobil — is a internet market for accessories and mobile phones and provides several discounts for customers.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/14.jpg" alt="">
               <div class="down-content">
-                <h4>Asia Avto Credit — Mamlakatimizda ko'p yillardan beri ma'lum shartlar asosida muddatsiz kreditga mashina sotib olish imkoniyatini beradi.</h4>
+                <h4>Asia Avto Credit — is Auto Credit Company with high experience and offers variety of credit ways for customers who wants to buy a new car</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
