--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="item">
               <img src="./img/1.jpg" alt="">
               <div class="down-content">
-                <h4>Protexno — Maishiy texnikalar va telefonlar do'koni bo'lib, 3 yil kafolat ostida Toshkentda bo'ylab bepul yetkazib beradi. </h4>
+                <h4>Protexno — Maishiy texnikalar va telefonlar do'koni bo'lib, 3 yil kafolat ostida Toshkent bo'ylab bepul yetkazib beradi. </h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
@@ -211,9 +211,9 @@ https://templatemo.com/tm-582-tale-seo-agency
               </div>
             </div>
             <div class="item">
-              <img src="./img/9.jpg" alt="">
+              <img src="./img/17.jpg" alt="">
               <div class="down-content">
-                <h4>GRBS — O'zbekistonda xalqaro ta'lim va imtihon markazi bo'lgan xalqaro imtihonlarga va kasbga tayyorlash kurslarini taklif etadi.</h4>
+                <h4>Nilüfer mebel — bu yurtimizdagi sifatli mebellar ishlab chiqaruvchi korxonadir. Nilüfer mebel —sifat va kafolat.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
@@ -227,7 +227,7 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="item">
               <img src="./img/13.jpg" alt="">
               <div class="down-content">
-                <h4>As mobil — Andijon shahridagi telefon va aksessuarlar sotuvchi internet magazin bo'lib, u o'z mijozlarini chegurmalar bian tez tez xursand qiladi.</h4>
+                <h4>As mobil — Andijon shahridagi telefon va aksessuarlar sotuvchi internet magazin bo'lib, u o'z mijozlarini chegirmalar bian tez tez xursand qiladi.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
