--- a/index.ru.html
+++ b/index.ru.html
@@ -197,42 +197,43 @@ https://templatemo.com/tm-582-tale-seo-agency
             <div class="item">
               <img src="./img/1.jpg" alt="">
               <div class="down-content">
-                <h4>Protexno — Maishiy texnikalar va telefonlar do'koni bo'lib, 3 yil kafolat ostida Toshkentda bo'ylab bepul yetkazib beradi. </h4>
+                <h4>Protexno - Магазин бытовой техники и смартфонов, 3 года гарантии на многие товары, бесплатная доставка по всему Ташкенту. </h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/2.jpg" alt="">
               <div class="down-content">
-                <h4>Abu sahiy onlayn — O'zbekistondagi eng yirik internet do'konlaridan biri hisoblanadi. Brend asoschisi, elchi va bloger Feruzbek Kamolov.</h4>
+                <h4>Abu sahiy onlayn - Является одной из крупных интернет магазинов в Узбекистане. Создатель брэнда, посол и блогер Feruzbek Kamolov.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
-              <img src="./img/9.jpg" alt="">
+              <img src="./img/17.jpg" alt="">
               <div class="down-content">
-                <h4>GRBS — O'zbekistonda xalqaro ta'lim va imtihon markazi bo'lgan xalqaro imtihonlarga va kasbga tayyorlash kurslarini taklif etadi.</h4>
+                <h4>Нилюфер мебель - Качественный изготовитель мебели в нашей стране.
+                  Нилюфер мебель - гарантия и качество.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/12.jpg" alt="">
               <div class="down-content">
-                <h4>Boom box consulting — Ushbu yili kompaniya yordamida 1000dan ortiq abiturientlar Qozog'iston, Qirg'iziston va Tojikistondagi nufuzli universitetlar talabalari bo'ldi.</h4>
+                <h4>Boom box consulting - В этом году с помощью компании 1000 и более абитуриентов стали студентами в престижных вузах Казахстана, Киргизии и Таджикистана.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/13.jpg" alt="">
               <div class="down-content">
-                <h4>As mobil — Andijon shahridagi telefon va aksessuarlar sotuvchi internet magazin bo'lib, u o'z mijozlarini chegurmalar bian tez tez xursand qiladi.</h4>
+                <h4>As mobil - Магазин смартфонов и аксессуаров в городе Андижан, который радует своих клиентов множествами скидок и акций.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/14.jpg" alt="">
               <div class="down-content">
-                <h4>Asia Avto Credit — Mamlakatimizda ko'p yillardan beri ma'lum shartlar asosida muddatsiz kreditga mashina sotib olish imkoniyatini beradi.</h4>
+                <h4>Asia Avto Credit - В нашей стране уже много лет дает возможность приобрести на определенных условиях автомобиль в рассрочку.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
